# ams

./: .gitignore  README.md  ams perf board.diy  docker-compose.yml  nginx.conf
3d/: displayPicoPimoroni.step
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: devices.py  locations.py  peaks.py  sound_events.py  suspicious_incidents.py
backend/app/core/: config.py  time_utils.py
backend/app/db/: schema.py
backend/app/models/: __init__.py  audio_record.py  device_health_report.py  device_time_sync_event.py  peak.py  sound_event.py  suspicious_incident.py
backend/app/schemas/: __init__.py  audio_record.py  device_health.py  location.py  peak.py  sound_event.py  suspicious_incident.py
backend/app/services/: triangulation.py
backend/app/services/audio/: analysis.py  wav_writer.py
backend/app/udp_server/: handlers.py
docs/: README.md  android_app_plan.md
docs/diagrams/: 01_architektura_systemu.puml  02_logika_urzadzenia_embedded.puml  03_logika_backendu.puml
embeded/: .gitignore  CMakeLists.txt  PINOUT.md  README.md
embeded/include/: acoustic_runtime.h  audio_stream_queue.h  device_clock.h  device_runtime_config.h  device_status.h  diagnostics_service.h  health_runtime.h  ina219_wattmeter.h  inky_status_display.h  network_runtime.h  power_meter_service.h  runtime_status.h  sd_card_buffer.h  wifi_service.h  (+5 more)
fronend-main/: index.html  vite.config.js
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend-admin/: .gitignore
(+103 files in other folders)
